test/good/functions/nested01.px

func f() def
    print "f"
    func g() def
        print "g"
        return
    g()
    return

f()
