test/bad/functions/void3.px

func f(Void v) def
    return

func main() Int def
    return 0
